SONAR-18484 Add api/v2/system/liveness endpoint